2013-04-13 Dan Locks <dwlocks@zmanda.com>
	* packaging/sun-pkg/buildpkg: remove "use warnings" for solaris 8 compatibility

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Fix bad check.

2013-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Add force-level-1 command.
	* man/xml-source/amadmin.8.xml: Document force-level-1 command.
	* server-src/infofile.h: Add FORCE_LEVEL_1.
	* server-src/planner.c: Handle FORCE_LEVEL_1.

2013-04-11 Dan Locks <dwlocks@zmanda.com>
	* Update copyright date to 2013

2013-04-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm: Add await_device method and handle
	  cancelling a dump before the device is set.
	* perl/Amanda/Taper/Worker.pm: Call scribe wait_device before starting
	  the dump.

2013-04-09  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/sun-pkg/buildpkg: Do not run rpcgen, just remove the file
	  and let make do it.

2013-03-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Print the curl version to the debug file.

2013-03-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Improve error message,
	* pel/Amanda/Config.swg, perl/Amanda/Util.swg: EXTEND stack when
	  returning an array.

2013-03-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/glib-util.c: Checkrunning version of glib instaed of
	  compiled version.

2013-03-05  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_job.c: Call jndex_merge_environment() after reading
	  the index file.

2013-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/ScanInventory.pm: Remove leading and trailing space in
	  message from interactivity module. Use $self->{'chg'} instead of
	  $self->{'changer'},
	* perl/Amanda/Taper/Scribe.pm: Fix perl warning.

2013-02-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/single.pm: Keep an inventory.